# Helios-AI-Platform

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/cache/: redis_cache.py
backend/app/config/: settings.py
backend/app/core/: logging.py
backend/app/middleware/: request_context.py
backend/app/observability/: metrics.py
backend/app/retrieval/: pipeline.py
backend/app/routing/: model_router.py
backend/app/schemas/: chat.py
backend/app/services/: inference.py
backend/app/streaming/: sse.py
frontend/: next.config.js  package.json
frontend/src/app/: page.tsx
infra/loki/: loki-config.yaml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
