[project]
name = "helios-backend"
version = "0.1.0"
description = "Helios AI Platform backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "redis[hiredis]>=5.0.0",
  "httpx>=0.27.0",
  "qdrant-client>=1.11.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "structlog>=24.2.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.3.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "tenacity>=8.5.0"
]
